--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
+    "micromodal": "^0.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.5.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
