--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/micromodal": "^0.3.3",
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1"
   }
