--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "micromodal": "^0.4.6",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
     "react-hot-toast": "^2.1.1",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/micromodal": "^0.3.3",
+    "@types/react-datepicker": "^4.1.7",
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1"
   }
