--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "chart.js": "^3.6.0",
     "micromodal": "^0.4.6",
     "react": "^17.0.2",
     "react-datepicker": "^4.2.1",
