--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.6.0",
     "micromodal": "^0.4.6",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/micromodal": "^0.3.3",
+    "@types/react-csv": "^1.1.2",
     "@types/react-datepicker": "^4.1.7",
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1"
