--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "chart.js": "^3.6.0",
     "micromodal": "^0.4.6",
     "react": "^17.0.2",
-    "react-csv": "^2.0.3",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
     "react-hot-toast": "^2.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sheetjs-style": "^0.15.8",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
