--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "chart.js": "^3.6.0",
+    "formik": "^2.2.9",
     "micromodal": "^0.4.6",
     "react": "^17.0.2",
     "react-datepicker": "^4.2.1",
@@ -24,7 +25,8 @@
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
